# db_magic

./: .gitignore  README.md  main.py  pyproject.toml
db/: mydatabase1.db  mydatabase2.db  mydatabase3.db  mydatabase6.db
src/: main.py  main1.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7_fastapi.py
