[project]
name = "db-magic"
version = "0.1.0"
description = "Database sandbox tryout code."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.9",
]
